package Week5_PL_Escola;

public enum Categoria {
    ASSISTENTE,
    ADJUNTO,
    COORDENADOR
}
